kubernetes/k8s-deployment-horizontal-as.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-server-example
spec:
  replicas: 2   # número inicial de pods
  selector:
    matchLabels:
      app: authentication-server-example
  template:
    metadata:
      labels:
        app: authentication-server-example
    spec:
      containers:
      - name: authentication-server-example
        image: authentication-server-example:v1
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
