kubernetes/k8s-ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentication-server-flask-ingress
spec:
  rules:
  - http:
      paths:
      - path: "/api/v1/vg-hc-store/authentication"
        pathType: Prefix
        backend:
          service:
            name: authentication-server-flask-service
            port:
              number: 5000
